--- a/bookSearch/src/app/home/home.page.scss
+++ b/bookSearch/src/app/home/home.page.scss
@@ -1,1 +1,11 @@
 
+.vertical-align-content > *
+{
+     display: flex!important;
+     align-content: center!important;
+     align-items: center!important;
+}
+
+.inner-scroll{
+    display: flex!important;
+}
