--- a/bookSearch/src/app/search-list/search-list.page.html
+++ b/bookSearch/src/app/search-list/search-list.page.html
@@ -1,9 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>search-list</ion-title>
+    <ion-title>Results</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-
+<ion-list>
+</ion-list>
 </ion-content>
