interaccion paginas home con search-list con router

--- a/bookSearch/src/app/home/home.page.html
+++ b/bookSearch/src/app/home/home.page.html
@@ -12,7 +12,7 @@
     <ion-row>
       <ion-col align-self-center>
         <ion-searchbar showCancelButton cancelButtonText="Custom Cancel" (ionInput)="updateText($event)"></ion-searchbar>
-        <ion-button (click)="getItems($event)" routerLink="/search-list">Go</ion-button>
+        <ion-button (click)="getItems($event)">Go</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
