interaccion paginas : envio parametro de busqueda. Se agrega boton de volver

--- a/bookSearch/src/app/search-list/search-list.page.html
+++ b/bookSearch/src/app/search-list/search-list.page.html
@@ -1,10 +1,13 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot='start'>
+      <ion-back-button defaultHref='/'></ion-back-button>
+    </ion-buttons>
     <ion-title>Results</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-<ion-list>
+<ion-list> 
 </ion-list>
 </ion-content>
