--- a/bookSearch/src/app/search-list/search-list.page.html
+++ b/bookSearch/src/app/search-list/search-list.page.html
@@ -5,6 +5,13 @@
 </ion-header>
 
 <ion-content padding>
-<ion-list>
+<ion-list *ngFor="let book of books">
+  <ion-grid>
+      <ion-img [src]="book.linkImage"></ion-img>
+      <ion-title>title: {{book.title}}</ion-title>
+      <ion-label *ngFor="let author of book.authores" > author: {{author}}</ion-label>
+      <ion-label *ngFor="let category of book.categories" > categories: {{category}}</ion-label>
+      <ion-label>etiqueta : {{book.etiqueta}}</ion-label>
+  </ion-grid>
 </ion-list>
 </ion-content>
