--- a/bookSearch/src/app/search-list/search-list.page.html
+++ b/bookSearch/src/app/search-list/search-list.page.html
@@ -19,7 +19,7 @@
         <ion-col size="8"> 
             <p ><B>{{book.title}}</B></p>
             <p *ngFor="let author of book.authores">{{author}}</p>
-            <div *ngFor="let category of book.categories" >{{category}}</div>
+            <p *ngFor="let category of book.categories" >{{category}}</p>
         </ion-col>
       </ion-row>
     </ion-grid>
