--- a/bookSearch/src/app/book-detail/book-detail.page.html
+++ b/bookSearch/src/app/book-detail/book-detail.page.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>book-detail</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-
+<h1>Aca deberían ir los detalles</h1>
 </ion-content>
